# telephone_nlu

./: .gitignore  LICENSE  README.md  baresip.service  pyproject.toml  requirements.txt  telephone_nlu.service  telephone_nlu_actions.service
telephone_nlu/: actions.py  config.yml  domain.yml  telephone_nlu  telephone_nlu_actions
telephone_nlu/data/: nlu.yml  persons.yml  responses.yml  rules.yml  stories.yml
telephone_nlu/tests/: test_stories.yml
