[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "telephone_nlu"
requires-python = "~=3.8"
license = { file = "LICENSE" }
authors = [
    { email = "tnlu@ohmesoftware.de" },
    { name = "Karsten Ohme" }
]
description = "This project defines a NLU (natural language understanding project) for a telephone vocabulary."
readme = "README.md"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'Topic :: Communications :: Telephony',
    'License :: Other/Proprietary License',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
    'Operating System :: POSIX :: Linux',
    'Natural Language :: German',
    'Environment :: Console',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
]
dynamic = ["version", "dependencies"]

[project.urls]
repository = "https://github.com/kaoh/TelephoneNLU"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
script-files = ["telephone_nlu/telephone_nlu_actions", "telephone_nlu/telephone_nlu"]
include-package-data = false

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
exclude = ['venv**', 'testbuild**', 'baresip']

[tool.setuptools.package-data]
"telephone_nlu.models" = ['20230204-045555-faint-channel.tar.gz']
"telephone_nlu" = ['endpoints.yml']

